# snake-game

./: Cargo.toml  README.md
src/: food.rs  game.rs  main.rs  menu.rs  snake.rs
